// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayListItem snapshots > renders selected item 1`] = `
<div>
  <button
    class="w-full px-5 py-4 text-left transition-colors bg-niners-black/10 dark:bg-niners-mist/10"
    type="button"
  >
    <div
      class="grid grid-cols-[minmax(0,1fr)_3.5rem] items-start gap-6"
    >
      <div
        class="min-w-0"
      >
        <p
          class="text-niners-black dark:text-niners-mist text-base leading-5 font-semibold wrap-word whitespace-normal"
        >
          Shallow Bay
        </p>
        <p
          class="text-niners-black/60 dark:text-niners-mist/70 mt-1 text-sm leading-5 font-medium wrap-word whitespace-normal"
        >
          North Sound
        </p>
      </div>
      <span
        class="text-niners-black/50 dark:text-niners-mist/60 text-right text-sm font-medium tabular-nums"
      >
        4:05
      </span>
    </div>
  </button>
</div>
`;

exports[`PlayListItem snapshots > renders short duration formatting 1`] = `
<div>
  <button
    class="w-full px-5 py-4 text-left transition-colors hover:bg-niners-black/5 dark:hover:bg-niners-mist/5"
    type="button"
  >
    <div
      class="grid grid-cols-[minmax(0,1fr)_3.5rem] items-start gap-6"
    >
      <div
        class="min-w-0"
      >
        <p
          class="text-niners-black dark:text-niners-mist text-base leading-5 font-semibold wrap-word whitespace-normal"
        >
          Shallow Bay
        </p>
        <p
          class="text-niners-black/60 dark:text-niners-mist/70 mt-1 text-sm leading-5 font-medium wrap-word whitespace-normal"
        >
          North Sound
        </p>
      </div>
      <span
        class="text-niners-black/50 dark:text-niners-mist/60 text-right text-sm font-medium tabular-nums"
      >
        0:09
      </span>
    </div>
  </button>
</div>
`;

exports[`PlayListItem snapshots > renders unselected item 1`] = `
<div>
  <button
    class="w-full px-5 py-4 text-left transition-colors hover:bg-niners-black/5 dark:hover:bg-niners-mist/5"
    type="button"
  >
    <div
      class="grid grid-cols-[minmax(0,1fr)_3.5rem] items-start gap-6"
    >
      <div
        class="min-w-0"
      >
        <p
          class="text-niners-black dark:text-niners-mist text-base leading-5 font-semibold wrap-word whitespace-normal"
        >
          Shallow Bay
        </p>
        <p
          class="text-niners-black/60 dark:text-niners-mist/70 mt-1 text-sm leading-5 font-medium wrap-word whitespace-normal"
        >
          North Sound
        </p>
      </div>
      <span
        class="text-niners-black/50 dark:text-niners-mist/60 text-right text-sm font-medium tabular-nums"
      >
        4:05
      </span>
    </div>
  </button>
</div>
`;
